style: fix align center

--- a/src/styles/app.module.css
+++ b/src/styles/app.module.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-content: center;
+    align-items: center;
     height: 100vh;
 }
 
